@@ -37,18 +37,18 @@ bits
 -(void) ts_sendCString: (const char *)str;
 -(void) ts_sendCString: (const char *)msg  length: (int)len;
 
--(void) ts_goto: (int)x:(int)y;
--(void) ts_putChar: (screen_char_t)ch  count: (int)c  at: (int)x:(int)y;
+-(void) ts_goto: (int)x :(int)y;
+-(void) ts_putChar: (screen_char_t)ch  count: (int)c  at: (int)x :(int)y;
 -(void) ts_putChar: (screen_char_t)ch  count: (int)c  offset: (int)ofs;
 
 /* The portions scrolled/shifted from remain unchanged. However, it's
 assumed that they will be cleared or overwritten before the redraw is
 complete. (TODO check this) */
--(void) ts_scrollUp: (int)top:(int)bottom  rows: (int)nr  save: (BOOL)save;
--(void) ts_scrollDown: (int)top:(int)bottom  rows: (int)nr;
+-(void) ts_scrollUp: (int)top :(int)bottom  rows: (int)nr  save: (BOOL)save;
+-(void) ts_scrollDown: (int)top :(int)bottom  rows: (int)nr;
 -(void) ts_shiftRow: (int)y  at: (int)x0  delta: (int)d;
 
--(screen_char_t) ts_getCharAt: (int)x:(int)y;
+-(screen_char_t) ts_getCharAt: (int)x :(int)y;
 
 -(void) ts_setTitle: (NSString *)new_title  type: (int)title_type;
 
